# VietnamStudentHackathon2026_GroupC

./: .dockerignore  .gitignore  Dockerfile  PIPELINE.md  README.md  config.py  docker-compose.yml  inference.sh  main.py  predict.py  pyproject.toml  requirements.txt
output/: .gitkeep
src/: bootstrap.py  engine.py  extract.py  features.py  io_utils.py  pipeline.py  solvers.py
